--- a/README
+++ b/README
@@ -2,6 +2,10 @@
 
 e e ededd s
 dsf ds fdsfsd 
+ ds 
+dfds 
+ dsfsf
+ddfdfds dfdssfa
 
 Rails is a web-application framework that includes everything needed to create
 database-backed web applications according to the Model-View-Control pattern.
